--- a/lab1.html
+++ b/lab1.html
@@ -1,8 +1,8 @@
 <h1>Дисконт</h1>
 
 <p>
-    <img src="discount1.jpeg" height="300" width="500">
-</p>>
+    <img src="discount1.jpeg" height="300">
+</p>
 
 <p>
     <b>Дисконт</b> (англ. <i>discount</i>) — <b>экономический термин</b>, в буквальном
