--- a/lab2.html
+++ b/lab2.html
@@ -44,6 +44,35 @@
             </div>
             
             <h2>Преимущества</h2>
+
+            <ol>
+                <li>Простое управление</li>
+                <li>Поддержка любого типа флеш носителей и USB жестких дисков</li>
+                <li>Различные режимы копирования:</li>
+                    <ul>
+                        <li>синхронный режим</li>
+                        <li>асинхронный режим</li>
+                    </ul>
+                <li>Не требуется время для загрузки и остывания</li>
+                <li>Высокая скорость копирования - 2 Гб/мин</li>
+            </ol>
+            <div>А так же:</div>
+            <ol start="6">
+                <li>Автономная система под ключ, компьютер не требуется</li>
+                <li>Копирование и сравнение с оригиналом, что исключает ошибки</li>
+                <li>ЖК-дисплей с отображением всего, что в данный момент делает дубликатор:</li>
+                    <ul>
+                        <li>состояние копирования</li>
+                        <li>объём скопированных файлов</li>
+                        <li>скорость копирования</li>
+                    </ul>
+            </ol>
+            <div>И еще:</div>
+            <ol start="9">
+                <li>Благодаря небольшим размерам можно носить с собой</li>
+                <li>Футуристичный дизайн</li>
+                <li>USB-дубликатор &ndash; Ваш надежный помощник</li>
+            </ol>
         </main>
 
         <footer>
