--- a/lab2.html
+++ b/lab2.html
@@ -5,7 +5,7 @@
         <title>Постников Кирилл Николаевич. Лабораторная 2</title>
     </head>
     
-    <body>
+    <body style="background-color: rgb(215, 247, 241); color: rgb(122, 32, 32); font-family: Arial;">
         <header>
             НГТУ, ФБ, Лабораторная работа 2
             <hr>
