--- a/lab2.html
+++ b/lab2.html
@@ -5,10 +5,9 @@
         <title>Постников Кирилл Николаевич. Лабораторная 2</title>
     </head>
     
-    <body style="background-color: rgb(215, 247, 241); color: rgb(122, 32, 32); font-family: Arial;">
-        <header>
+    <body style="background-color: rgb(215, 247, 241); color: rgb(122, 32, 32); font-family: Arial; margin: 0px;">
+        <header style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt;">
             НГТУ, ФБ, Лабораторная работа 2
-            <hr>
         </header>
 
         <main>
