--- a/lab2.html
+++ b/lab2.html
@@ -183,8 +183,7 @@
             </table>
         </main>
 
-        <footer>
-            <hr>
+        <footer style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt; font-style: italic; text-align: right;">
             &copy;Кирилл Постников, ФБИ-14, 2 курс, 2023
         </footer>
     </body>
