--- a/lab2.html
+++ b/lab2.html
@@ -5,7 +5,7 @@
         <title>Постников Кирилл Николаевич. Лабораторная 2</title>
     </head>
     
-    <body style="background-color: rgb(215, 247, 241); color: rgb(122, 32, 32); font-family: Arial; margin: 0px;">
+    <body style="background-color: rgb(175, 222, 239); color: rgb(129, 24, 24); font-family: Arial; margin: 0px;">
         <header style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt;">
             НГТУ, ФБ, Лабораторная работа 2
         </header>
@@ -77,7 +77,7 @@
 
             <table border="1" width="100%">
                 <tr>
-                    <td colspan="4"><b>USB-дубликаторы серии Super-Tower</b></td>
+                    <td colspan="4" style="text-align: center;"><b>USB-дубликаторы серии Super-Tower</b></td>
                 </tr>
                 <tr>
                     <td><b>Модель</b></td>
@@ -86,13 +86,13 @@
                     <td><b>Наличие</b></td>
                 </tr>
                 <tr>
-                    <td>USB-3 (UB300)</td>
+                    <td>USB-3 (UB300)&nbsp;<sup title="Модель USB-3(UB300) появилась продаже 01.01.2023" style="font-style: italic; color: red; background-color: yellow; border-radius: 3px;">New!</sup></td>
                     <td>3</td>
                     <td>50000</td>
                     <td rowspan="2">В наличии</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-7</td>
+                    <td>Super USB 1-7&nbsp;<sup title="Модель Super USB 1-7 появилась продаже 17.01.2023" style="font-style: italic; color: red; background-color: yellow; border-radius: 3px;">New!</sup></td>
                     <td>8</td>
                     <td>165700</td>
                 </tr>
@@ -116,7 +116,7 @@
                     <td>48</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-55</td>
+                    <td>Super USB 1-55&nbsp;<sup title="Модель Super USB 1-55 появилась продаже 02.02.2023" style="font-style: italic; color: red; background-color: yellow; border-radius: 3px;">New!</sup></td>
                     <td>56</td>
                 </tr>
                 <tr>
