--- a/lab2.html
+++ b/lab2.html
@@ -129,7 +129,7 @@
 
             <table border="1" width="100%">
                 <tr>
-                    <td colspan="4"><b>USB-дубликаторы Intelligent Series</b>
+                    <td colspan="4" style="text-align: center;"><b>USB-дубликаторы Intelligent Series</b>
                         <div><b><i>с поддержкой внешних жестких дисков USB!</i></b></div>
                     </td>
                 </tr>
@@ -143,7 +143,7 @@
                     <td>Intelligent USB 1-9<sup>A</sup></td>
                     <td>10</td>
                     <td>205&nbsp;000</td>
-                    <td rowspan="2">в наличии</td>
+                    <td rowspan="2"><span style="background-color: rgb(51, 230, 51);">в наличии</span></td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-19<sup>X</sup></td>
@@ -154,7 +154,7 @@
                     <td>Intelligent USB 1-29<sup>S</sup></td>
                     <td>30</td>
                     <td>370&nbsp;000</td>
-                    <td rowspan="3">в пути</td>
+                    <td rowspan="3"><span style="background-color: rgb(77, 154, 255);">в пути</span></td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-29<sup>G</sup></td>
