--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Постников Кирилл Николаевич. Лабораторные работы по WEB-программированию</title>
 </head>
-<body>
-    
+<body style="background-color: rgb(175, 222, 239); color: rgb(129, 24, 24); font-family: Arial; margin: 0px;">
+    <header style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt;">
+        НГТУ, ФБ
+    </header>
+
+    <main>
+        <h1>Лабораторные работы по WEB-программированию.</h1>
+
+        <ol>
+            <li>
+                <a href="lab1.html" target="_blank" style="text-decoration: none; color: rgb(41, 129, 41);">Лабораторная работа 1</a>
+            </li>
+            <li>
+                <a href="lab2.html" target="_blank" style="text-decoration: none; color: rgb(41, 129, 41);">Лабораторная работа 2</a>
+            </li>
+        </ol>
+        
+    </main>
+
+    <footer style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt; font-style: italic; text-align: right;">
+        &copy;Кирилл Постников, ФБИ-14, 2 курс, 2023
+    </footer>
 </body>
 </html>
