--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Постников Кирилл Николаевич. Лабораторные работы по WEB-программированию</title>
+    <link rel="stylesheet" href="main.css">
 </head>
-<body style="background-color: rgb(175, 222, 239); color: rgb(129, 24, 24); font-family: Arial; margin: 0px;">
-    <header style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt;">
+<body>
+    <header>
         НГТУ, ФБ
     </header>
 
@@ -16,16 +17,16 @@
 
         <ol>
             <li>
-                <a href="lab1.html" target="_blank" style="text-decoration: none; color: rgb(41, 129, 41);">Лабораторная работа 1</a>
+                <a href="lab1.html" target="_blank">Лабораторная работа 1</a>
             </li>
             <li>
-                <a href="lab2.html" target="_blank" style="text-decoration: none; color: rgb(41, 129, 41);">Лабораторная работа 2</a>
+                <a href="lab2.html" target="_blank">Лабораторная работа 2</a>
             </li>
         </ol>
         
     </main>
 
-    <footer style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt; font-style: italic; text-align: right;">
+    <footer>
         &copy;Кирилл Постников, ФБИ-14, 2 курс, 2023
     </footer>
 </body>
