--- a/lab3.html
+++ b/lab3.html
@@ -39,6 +39,20 @@
             margin-left: 2cm;
             text-indent: 0;
         }
+        .shadow {
+            text-shadow: 4px 5px 2px gray;
+        }
+        .shadowblue {
+            text-shadow: -4px 5px 2px blue;
+        }
+        .task9 {
+            text-shadow: 0 0 3px blue;
+        }
+
+        .заголовок:hover {
+            transition: 1s 250ms;
+            text-shadow: 4px 5px 2px gray;
+        }
     </style>
 </head>
 <body>
@@ -47,7 +61,7 @@
     </header>
 
     <main>
-        <h1>Расчет (формула)</h1>
+        <h1 class="заголовок">Расчет (формула)</h1>
 
         <div>
             Расчет сводится к определению разницы между активами и пассивами
@@ -102,6 +116,12 @@
         <div class="formula-description">
             Чистые активы = стр.1300 - ЗУ + ДБП
         </div>
+
+        <div class="shadow">Тень</div>
+
+        <div class="shadowblue">Синяя тень слева снизу</div>
+
+        <div class="task9">Синее размытие</div>
     </main>
 
     <footer>
