--- a/lab3.html
+++ b/lab3.html
@@ -49,6 +49,10 @@
             text-shadow: 0 0 3px blue;
         }
 
+        .заголовок {
+            transition: 1s 250ms;
+        }
+
         .заголовок:hover {
             transition: 1s 250ms;
             text-shadow: 4px 5px 2px gray;
@@ -113,7 +117,7 @@
             точно такой же результат как и формула выше будет:
         </div>
 
-        <div class="formula-description">
+        <div class="formula">
             Чистые активы = стр.1300 - ЗУ + ДБП
         </div>
 
