--- a/lab4.html
+++ b/lab4.html
@@ -6,13 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Постников Кирилл Николаевич. Лабораторная 4</title>
     <link rel="stylesheet" href="main.css">
+    <style>
+        div {
+            margin: 20px;
+            border: 1px solid;
+            border-radius: 7px;
+            padding: 7px;
+            width: 500px;
+        }
+    </style>
 </head>
 <body>
     <header>
         НГТУ, ФБ, Лабораторная работа 4
     </header>
     <main>
-
+        <div>
+            Я очень рад, что книгу заметили в издательстве «АСТ». Я вёл переговоры и с другими 
+            (плохими, негодными) издательствами, но кого-то испугало название, а кого-то, видимо, содержание.
+            Или, может быть, я не умел представить книгу правильно. Но в итоге всё вышло наилучшим образом:
+            после множества ревизий книга стала гораздо точнее,подробнее и интересней. 
+            А я, как Джоан Роулинг, после 33 отказов скоро стану миллиардером. 
+            «Хулиномику» экранизирует Спилберг или хотя бы Михалков; хотя во втором случае я, 
+            конечно, вряд ли смогу претендовать на главную роль.
+        </div>
+        <div>
+            Существуют теории – математические, – которые помогают создавать финансовые структуры,
+             и они достаточно сложны – как, например, сложны паровой двигатель или электростанция. 
+            У них много компонентов, которые должны чётко работать без сбоев, а если сбой и случается, 
+            в работающей на практике схеме будет много уровней защиты.
+            Поэтому, прежде чем открывать счёт у форекс-брокера, подумайте, 
+            доверили бы вы дворнику поиграть с отбойным молотком у себя в квартире,
+             если вам нужно всего лишь повесить на стену фотку любимой жены или другой женщины.
+        </div>
+        <div>
+            Далеко-далеко в Калифорнии безработные негры думали, что дома могут только дорожать, 
+            и банки почему-то думали точно так же – и выдавали им ничем не обеспеченные кредиты. 
+            Безработный «покупал» дом за 150 тысяч долларов без первого взноса, платил по 700 долларов в месяц, 
+            а через полгода оказывалось, что его дом стоит уже 180 тысяч, он его продавал и покупал дом за 200 тысяч, 
+            вложив виртуальное подорожание как первый взнос. Банк доволен, негр доволен, агент по недвижимости ещё сильнее доволен. 
+            Только когда каждый второй негр через год перестал платить по кредиту, а банки попытались продать заложенные дома, выяснилось, 
+            что все дома на этой улице уже выставлены на продажу и никто не хочет их покупать ни за 180, ни за 150, ни даже за 100 тысяч.
+        </div>
+        <div>
+            После окончания холодной войны (а точнее, после поражения СССР) стало очевидно, что развитые страны развиты в первую очередь экономически. 
+            А развивающиеся страны – это те, которые применяют уже разработанные технологии и адаптируют их к своей ситуации.
+             Часто готовые технологии просто копируются. Тут ничего плохого нет, все это делают. Когда изобрели автомобиль, он очень скоро оказался во всех странах мира; 
+             с самолётами то же самое. Сейчас технологии скрывать всё труднее, но для финансов это и не плохо, а даже и хорошо.
+        </div>
     </main>
     <footer>
         &copy; Постников Кирилл, ФБИ-14, 2 курс, 2023
