--- a/lab4.html
+++ b/lab4.html
@@ -13,6 +13,9 @@
             border-radius: 7px;
             padding: 7px;
             width: 500px;
+            height: 120px;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
     </style>
 </head>
