--- a/lab4.html
+++ b/lab4.html
@@ -16,7 +16,21 @@
             height: 120px;
             overflow-x: hidden;
             overflow-y: auto;
+            position: relative;
+            background: #f0f8ff;
+            z-index: 1;
         }
+        .second {
+            left: 380px;
+            top: 120px;
+            position: fixed;
+            z-index: 0;
+        }
+        .second:hover {
+            position: fixed;
+            z-index: 2;
+        }
+
     </style>
 </head>
 <body>
@@ -33,9 +47,9 @@
             «Хулиномику» экранизирует Спилберг или хотя бы Михалков; хотя во втором случае я, 
             конечно, вряд ли смогу претендовать на главную роль.
         </div>
-        <div>
+        <div class="second">
             Существуют теории – математические, – которые помогают создавать финансовые структуры,
-             и они достаточно сложны – как, например, сложны паровой двигатель или электростанция. 
+            и они достаточно сложны – как, например, сложны паровой двигатель или электростанция. 
             У них много компонентов, которые должны чётко работать без сбоев, а если сбой и случается, 
             в работающей на практике схеме будет много уровней защиты.
             Поэтому, прежде чем открывать счёт у форекс-брокера, подумайте, 
@@ -54,8 +68,8 @@
         <div>
             После окончания холодной войны (а точнее, после поражения СССР) стало очевидно, что развитые страны развиты в первую очередь экономически. 
             А развивающиеся страны – это те, которые применяют уже разработанные технологии и адаптируют их к своей ситуации.
-             Часто готовые технологии просто копируются. Тут ничего плохого нет, все это делают. Когда изобрели автомобиль, он очень скоро оказался во всех странах мира; 
-             с самолётами то же самое. Сейчас технологии скрывать всё труднее, но для финансов это и не плохо, а даже и хорошо.
+            Часто готовые технологии просто копируются. Тут ничего плохого нет, все это делают. Когда изобрели автомобиль, он очень скоро оказался во всех странах мира; 
+            с самолётами то же самое. Сейчас технологии скрывать всё труднее, но для финансов это и не плохо, а даже и хорошо.
         </div>
     </main>
     <footer>
