--- a/lab4.html
+++ b/lab4.html
@@ -47,6 +47,11 @@
         main {
             margin-left: 320px;
         }
+        footer {
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
     </style>
 </head>
 <body>
