--- a/lab4.html
+++ b/lab4.html
@@ -23,7 +23,7 @@
         .second {
             left: 380px;
             top: 120px;
-            position: fixed;
+            position: absolute;
             z-index: 0;
         }
         .second:hover {
@@ -49,8 +49,10 @@
         }
         footer {
             position: fixed;
-            width: 100%;
             bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 2;
         }
     </style>
 </head>
@@ -115,6 +117,7 @@
             Часто готовые технологии просто копируются. Тут ничего плохого нет, все это делают. Когда изобрели автомобиль, он очень скоро оказался во всех странах мира; 
             с самолётами то же самое. Сейчас технологии скрывать всё труднее, но для финансов это и не плохо, а даже и хорошо.
         </div>
+
     </main>
 
     <footer>
