--- a/lab4.html
+++ b/lab4.html
@@ -52,7 +52,156 @@
             bottom: 0;
             left: 0;
             right: 0;
+            z-index: 16;
+        }
+        img {
+            width: 1050px;
+            height: 690px;
+            border: 3px rgb(0, 0, 0) solid;
+            margin-left: 15%;
+            position: relative;
+            top: 415px;
+            z-index: 16;
+        }
+        .cloud1 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
+            z-index: 12;
+            padding: 10px;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            font-weight: bold;
+            font-style: italic;
+            font-size: 14 px;
+            font-family: monospace;
+            text-indent: 10px;
+            text-align: left;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 265px;
+            left: 220px;
+            width: 14%;
+            display: block;
+        }
+        .cloud2 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
+            z-index: 13;
+            padding: 30px;
+            padding-top: 25px;
+            padding-bottom: 25px;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 265px;
+            width: 10px;
+            left: 260px;
+            display: block;
+        }
+        .cloud3 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
+            z-index: 14;
+            padding: 20px;
+            padding-top: 15px;
+            padding-bottom: 15px;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 245px;
+            width: 1px;
+            left: 310px;
+            display: block;
+        }
+        .cloud4 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
+            z-index: 15;
+            padding: 7px;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 220px;
+            left: 350px;
+            width: 1px;
+            display: block;
+        }
+        .cloud5 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
             z-index: 2;
+            padding: 10px;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            font-weight: bold;
+            font-style: italic;
+            font-size: 14px;
+            font-family: monospace;
+            text-indent: 10px;
+            text-align: justify;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 505px;
+            left: 1070px;
+            width: 12%;
+            display: block;
+        }
+        .cloud6 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
+            z-index: 3;
+            padding: 30px;
+            padding-top: 25px;
+            padding-bottom: 25px;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 505px;
+            width: 10px;
+            left: 1180px;
+            display: block;
+        }
+        .cloud7 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
+            z-index: 4;
+            padding: 20px;
+            padding-top: 15px;
+            padding-bottom: 15px;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 485px;
+            width: 1px;
+            left: 1150px;
+            display: block;
+        }
+        .cloud8 {
+            background: linear-gradient(rgb(255, 255, 255), rgb(207, 206, 206));
+            color: black;
+            position: relative;
+            z-index: 5;
+            padding: 7px;
+            border-radius: 50%;
+            border: 2px black solid;
+            box-shadow: -5px 5px 1px rgb(0, 0, 0);
+            bottom: 460px;
+            left: 1130px;
+            width: 1px;
+            display: block;
+        }
+        img:hover {
+            z-index: 1;
+            transition: 2s 0.2s;
         }
     </style>
 </head>
@@ -117,8 +266,21 @@
             Часто готовые технологии просто копируются. Тут ничего плохого нет, все это делают. Когда изобрели автомобиль, он очень скоро оказался во всех странах мира; 
             с самолётами то же самое. Сейчас технологии скрывать всё труднее, но для финансов это и не плохо, а даже и хорошо.
         </div>
-
     </main>
+
+    <img src="https://st1.uvnimg.com/58/81/23f73b87436cb19d9b7446716122/48.jpg">
+
+        <div class="cloud1">What's going on, Albert, where is everyone?</div>
+        <div class="cloud2"></div>
+        <div class="cloud3"></div>
+        <div class="cloud4"></div>
+        <div class="cloud5">Labor Day, everyone has a day off. Ironic, isn't it, sir?</div>
+        <div class="cloud6"></div>
+        <div class="cloud7"></div>
+        <div class="cloud8"></div>
+
+    </img>
+
 
     <footer>
         &copy; Постников Кирилл, ФБИ-14, 2 курс, 2023
