доавили ргз в меню

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <li>
                 <a href="lab4.html" target="_blank">Лабораторная работа 4</a>
             </li>
+            <li>
+                <a href="1.html" target="_blank">РГЗ</a>
+            </li>
+
         </ol>
         
     </main>
