--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <a href="lab4.html" target="_blank">Лабораторная работа 4</a>
             </li>
             <li>
+                <a href="lab5.html" target="_blank">Лабораторная работа 5</a>
+            </li>
+            <li>
                 <a href="1.html" target="_blank">РГЗ</a>
             </li>
 
