--- a/lab2.html
+++ b/lab2.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Постников Кирилл Николаевич. Лабораторная 2</title>
+        <link rel="stylesheet" href="main.css">
     </head>
     
-    <body style="background-color: rgb(175, 222, 239); color: rgb(129, 24, 24); font-family: Arial; margin: 0px;">
-        <header style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt;">
+    <body >
+        <header>
             НГТУ, ФБ, Лабораторная работа 2
         </header>
 
@@ -183,7 +184,7 @@
             </table>
         </main>
 
-        <footer style="background-color: black; color: lightgreen; padding: 10px; font-size: 16pt; font-style: italic; text-align: right;">
+        <footer>
             &copy;Кирилл Постников, ФБИ-14, 2 курс, 2023
         </footer>
     </body>
