--- a/lab5.html
+++ b/lab5.html
@@ -46,7 +46,7 @@
             alert('Произведение '+ a + ' и '+ b + ' равна ' +  result);
         }
         function showAuthor() {
-            let author = "Автор страницы:\nПостников Кирилл Николаевич\nУ студента нет цели, есть только путь, тяжелый и невыносимый путь...";
+            let author = "Автор страницы:\nПостников Кирилл Николаевич\nУчись, студент!";
             alert(author);
         }
         function changeOutput(buttomNum, backColor, textColor, borderColor) {
