--- a/lab5.html
+++ b/lab5.html
@@ -167,7 +167,7 @@
         <label>Второе число: <input type="number" value="7891" id="numberB"></label><br>
         <div class="message" onclick="showAuthor()">Узнать, кто автор страницы</div>
         <div class="message" onclick="showSum()">Найти сумму чисел</div>
-        <!-- Чтобы запустить какой-то код при нажатии используется атрибут onclick – в него просто прописывается нужная функция: -->
+        <!-- Чтобы запустить какой-то код при нажати используется атрибут onclick – в него просто прописывается нужная функция: -->
         <div class="message" onclick="showRazn()">Найти разность чисел</div>
         <div class="message" onclick="showDel()">Найти деление</div>
         <div class="message" onclick="showUmn()">Найти произведение</div>
