--- a/lab5.html
+++ b/lab5.html
@@ -161,7 +161,7 @@
     
     <main>
         <label>Первое число: <input type="number" value="5154" id="numberA"></label><br> 
-        <!-- Label доп. функциональность, для фокуса не только на поле ввода но и на текст "Первое число" -->
+        <!-- Label доп. функциональность, для фокуса не только на поле ввода, но и на текст "Первое число" -->
         <!-- value – это значение, которое будет отображаться в поле ввода при загрузке страницы. Если value не указывать, то поле ввода изначально будет пустым: -->
 
         <label>Второе число: <input type="number" value="7891" id="numberB"></label><br>
