--- a/lab5.html
+++ b/lab5.html
@@ -126,10 +126,10 @@
             background-color: rgb(30, 43, 43);
         }
         .krug2 {
-            background-color: red;
+            background-color: rgb(79, 8, 8);
         }
         .krug3 {
-            background-color: green;
+            background-color: rgb(44, 105, 44);
         }
         .krug4 {
             background-color: rgb(150, 85, 150);
