--- a/lab6.html
+++ b/lab6.html
@@ -6,13 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Постников Кирилл Николаевич. Лабораторная 6</title>
     <link rel="stylesheet" href="main.css">
+    <style>
+        .game{
+        border-radius: 100px;
+        border: 2px solid rgb(130, 172, 56); 
+        margin: auto;
+        width: 500px;
+        padding: 20px 50px;
+        text-align: center;
+        }
+        .pravila{
+            border-radius: 30px;
+            background-color: rgb(110, 172, 172);
+            margin: auto;
+            width: 150px;
+            padding: 15px 10px;
+        }
+        .color{
+            border-radius: 5px;
+            border: 2px solid rgb(121, 44, 44);
+            background-color: rgb(255, 255, 60);
+            color: rgb(121, 44, 44);
+            position: relative;
+            left: 250px;
+            margin: auto;
+            width: 200px;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        .shelk{
+            width: 150px;
+            left: 0px;
+            cursor: pointer;
+            background-color: aquamarine;
+            font-family: 'Times New Roman', Times, serif;
+            border-radius: 30px;
+            border: 2px solid rgb(19, 179, 117);
+            text-align: center;
+            height: 100px;
+            vertical-align: middle;
+            top: 5px;
+            line-height: 90px;
+            position: relative;
+            transition: 1000ms;
+            transform: rotate(0);
+        }
+        .block{
+            width: 100px;
+            cursor: pointer;
+            height: 70px;
+            position: relative;
+            background-color: rgb(10, 139, 144);
+            border: 2px solid black;
+            border-radius: 30px;
+            left: 350px;
+            top: 0px;
+        }
+        .filtr{
+            margin-top: 0px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
         НГТУ, ФБ, Лабораторная работа 6
     </header>
     <main>
-        
+
     </main>
     <footer>
         &copy;Кирилл Постников, ФБИ-14, 2 курс, 2023
