--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <a href="lab5.html" target="_blank">Лабораторная работа 5</a>
             </li>
             <li>
+                <a href="lab6.html" target="_blank">Лабораторная работа 6</a>
+            </li>
+            <li>
                 <a href="1.html" target="_blank">РГЗ</a>
             </li>
 
