--- a/lab6.html
+++ b/lab6.html
@@ -67,6 +67,42 @@
             text-align: center;
         }
     </style>
+    <script>
+        let number;
+        let count = 0;
+            function startGame() {
+                number = Math.floor(Math.random() * 100) + 1;
+                let screens = document.getElementsByClassName('game');
+                screens[0].style.display = 'none';
+                screens[1].style.display = 'block';
+            }
+            function guess() {
+                count++;
+                let input = document.getElementById('user-number');
+                let userNumber = parseInt(input.value);
+                let message = document.getElementById('result')
+                if(userNumber > number) {
+                    message.innerHTML = 'Вы ввели слишком большое число';
+                }
+                else if (userNumber < number) {
+                    message.innerHTML = 'Вы ввели слишком маленькое число';
+                }
+                else {
+                    let screens = document.getElementsByClassName('game');
+                    screens[1].style.display = 'none';
+                    screens[2].style.display = 'block';
+                    let displayNumber = document.getElementById('number');
+                    document.getElementById('number').innerHTML = number;
+                    document.getElementById('try-count').innerHTML = count;
+                }
+                if(userNumber < 1) {
+                    message.innerHTML = 'Число должно быть в диапазоне от 1 до 100';
+                }
+                else if(userNumber > 100) {
+                    message.innerHTML = 'Число должно быть в диапазоне от 1 до 100';
+                }
+            }
+    </script>
 </head>
 <body>
     <header>
