--- a/lab6.html
+++ b/lab6.html
@@ -9,7 +9,7 @@
     <style>
         .game{
         border-radius: 100px;
-        border: 2px solid rgb(130, 172, 56); 
+        border: 2px solid rgb(201, 235, 142); 
         margin: auto;
         width: 500px;
         padding: 20px 50px;
@@ -25,7 +25,7 @@
         .color{
             border-radius: 5px;
             border: 2px solid rgb(121, 44, 44);
-            background-color: rgb(255, 255, 60);
+            background-color: rgb(146, 146, 8);
             color: rgb(121, 44, 44);
             position: relative;
             left: 250px;
@@ -38,7 +38,7 @@
             width: 150px;
             left: 0px;
             cursor: pointer;
-            background-color: aquamarine;
+            background-color: rgb(40, 124, 96);
             font-family: 'Times New Roman', Times, serif;
             border-radius: 30px;
             border: 2px solid rgb(19, 179, 117);
@@ -56,7 +56,7 @@
             cursor: pointer;
             height: 70px;
             position: relative;
-            background-color: rgb(10, 139, 144);
+            background-color: rgb(7, 86, 88);
             border: 2px solid black;
             border-radius: 30px;
             left: 350px;
@@ -101,6 +101,20 @@
                 else if(userNumber > 100) {
                     message.innerHTML = 'Число должно быть в диапазоне от 1 до 100';
                 }
+            }
+            function again() {
+                count=0;
+                let screens = document.getElementsByClassName('game');
+                screens[2].style.display = 'none';
+                screens[1].style.display = 'block'; 
+                number = Math.floor(Math.random() * 100) + 1; 
+                document.getElementById('try-count').innerHTML = count;
+                document.getElementById('result').innerHTML = "";
+            }
+            function prav() {
+                let scrin = document.getElementsByClassName('pravila');
+                scrin[0].style.display = 'none';
+                scrin[1].style.display = 'block';
             }
     </script>
 </head>
