--- a/lab6.html
+++ b/lab6.html
@@ -116,6 +116,52 @@
                 scrin[0].style.display = 'none';
                 scrin[1].style.display = 'block';
             }
+            function skrit() {
+                let scrin = document.getElementsByClassName('pravila');
+                scrin[1].style.display = 'none';
+                scrin[0].style.display = 'block';
+            }
+            function changeColor(div) {
+           if(div.style.backgroundColor == 'yellow') {
+            div.style.backgroundColor = 'red';
+            div.style.color = 'blue';
+            document.getElementById('color-name').innerHTML = 'красный';
+           }
+           else if(div.style.backgroundColor == 'red') {
+            div.style.backgroundColor = 'black';
+            div.style.color = 'yellow';
+            document.getElementById('color-name').innerHTML = 'черный';
+           }
+           else if(div.style.backgroundColor == 'black') {
+            div.style.backgroundColor = 'purple';
+            div.style.color = 'black';
+            document.getElementById('color-name').innerHTML = 'фиолетовый';
+           }
+           else if(div.style.backgroundColor == 'purple') {
+            div.style.backgroundColor = 'pink';
+            div.style.color = 'green';
+            document.getElementById('color-name').innerHTML = 'розовый';
+           }
+           else {
+            div.style.backgroundColor = 'yellow';
+            div.style.color = 'rgb(121, 44, 44)';
+            document.getElementById('color-name').innerHTML = 'желтый';
+           }
+        }
+        function plase(smena) {
+        if (smena.style.left == '0px'){
+            smena.style.left = '1000px';
+            if (smena.style.transform = 'rotate(0)'){
+                smena.style.transform = 'rotate(4turn)';
+            }
+          }
+           else {
+            smena.style.left = '0px';
+            if(smena.style.transform = 'rotate(4turn)'){
+               smena.style.transform = 'rotate(0)'  
+            }
+          }
+        }
     </script>
 </head>
 <body>
