--- a/lab6.html
+++ b/lab6.html
@@ -170,6 +170,58 @@
                 x.style.width = '100px'
             }
         }
+        function filter() {
+            let color = document.getElementById('wear-color').value;
+            let type = document.getElementById('wear-type').value;
+            let wear = document.getElementById('wear');
+
+            if(color == 'Красный' && type == 'Футболка'){
+                wear.src = 'redt-sh.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Красный' && type == 'Поло'){
+                wear.src = 'red-polo.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Красный' && type == 'Майка'){
+                wear.src = 'red-m.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Белый' && type == 'Футболка'){
+                wear.src = 'white-tsh.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Белый' && type == 'Поло'){
+                wear.src = 'white-polo.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Белый' && type == 'Майка'){
+                wear.src = 'white-tsh.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Черный' && type == 'Футболка'){
+                wear.src = 'blackt-sh.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Черный' && type == 'Поло'){
+                wear.src = 'black-polo.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+            else if(color == 'Черный' && type == 'Майка'){
+                wear.src = 'black-m.jpeg';
+                wear.style.width = '30%'
+                wear.style.height = '30%'
+            }
+        
+        }
     </script>
 </head>
 <body>
@@ -177,7 +229,76 @@
         НГТУ, ФБ, Лабораторная работа 6
     </header>
     <main>
+        <div class="game">
+            <button onclick="startGame()">
+                Сыграть в игру
+            </button>
+        </div>
 
+        <div class="game" style="display: none;">
+            <h1>Угадай число!</h1>
+            <div>
+                Задумано число от 1 до 100. Угадайте, какое?<br>
+                <input type="number" value="" min="1" max="100" id="user-number"><br>
+                <button onclick="guess()">Угадать</button>
+                <div id="result"></div>
+            </div>
+        </div>
+
+        <div class="game" style="display: none;">
+            <h1>Поздравляем, вы выиграли!</h1>
+            <div>
+                Задуманное число: <span id="number"></span>
+            </div>
+            <div>
+                Количество попыток: <span id="try-count"></span>
+            </div>
+            <div>
+                <button onclick="again()">Сыграть еще раз</button>
+            </div>
+        </div>
+
+        <div class="pravila">
+            <button onclick="prav()">Показать правила игры</button>
+        </div>
+        <div class="pravila" style="display: none;">
+            <button onclick="skrit()">Скрыть правила игры</button>
+            <ol type="I">
+            <li>нажмите кнопку сыграть в игру</li>
+            <li>введите число</li>
+            <li>проанализируйте ответ</li>
+            <li>попробуйте ввести новое число</li>
+            <li>убедитесь, что вводите правильный диапазон</li>
+            </ol>
+        </div>
+
+        <div class="color" ondblclick="changeColor(this)">
+            Цвет:<span id="color-name">желтый</span><br>
+            Сделайте двойной щелчок, чтобы сменить.
+        </div>
+
+        <div class="shelk" onclick="plase(this)">Щелкни меня</div>
+
+        <div class="block" onclick="block(this)""></div>
+        <div class="filter">
+            Цвет одежды:
+            <select id="wear-color">
+                <option>Красный</option>
+                <option>Белый</option>
+                <option>Черный</option>
+            </select><br>
+
+            Тип одежды:
+            <select id="wear-type">
+                <option>Футболка</option>
+                <option>Поло</option>
+                <option>Майка</option>
+            </select><br>
+
+            <button onclick='filter(this)'>OK</button><br>
+
+            <img id="wear">
+        </div>
     </main>
     <footer>
         &copy;Кирилл Постников, ФБИ-14, 2 курс, 2023
