--- a/lab6.html
+++ b/lab6.html
@@ -176,47 +176,47 @@
             let wear = document.getElementById('wear');
 
             if(color == 'Красный' && type == 'Футболка'){
-                wear.src = 'redt-sh.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=33553175641a322341e51298d087e6586bf825c2-8209926-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Красный' && type == 'Поло'){
-                wear.src = 'red-polo.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=3c62399edb03d89f8075063f0da54757b26b4b63-8169112-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Красный' && type == 'Майка'){
-                wear.src = 'red-m.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=fd3a633fbe1c0ed303828871741097d5-4078534-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Белый' && type == 'Футболка'){
-                wear.src = 'white-tsh.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=da44e4c2d75f164db39d4c3af8f0f871581617a7-9182438-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Белый' && type == 'Поло'){
-                wear.src = 'white-polo.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=8d42d0ec66f3fc7db6e6ce57d5ecce6ca86ae21f-7761683-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Белый' && type == 'Майка'){
-                wear.src = 'white-tsh.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=f1735e80ba33fe2d8b6a7210adee82381baf2f1d-9289605-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Черный' && type == 'Футболка'){
-                wear.src = 'blackt-sh.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=2b1b94289f4ca96c4d23314d1ea7ad1098cb6d6f-8400759-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Черный' && type == 'Поло'){
-                wear.src = 'black-polo.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=0ac4ad07b0dc174b38f74912b814e105166987cb-9151021-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
             else if(color == 'Черный' && type == 'Майка'){
-                wear.src = 'black-m.jpeg';
+                wear.src = 'https://avatars.mds.yandex.net/i?id=03dedc5f9a02ce54b2ec65aad7661fb85c4a958e-9164755-images-thumbs&n=13';
                 wear.style.width = '30%'
                 wear.style.height = '30%'
             }
