--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <a href="lab6.html" target="_blank">Лабораторная работа 6</a>
             </li>
             <li>
+                <a href="lab7.html" target="_blank">Лабораторная работа 7</a>
+            </li>
                 <a href="1.html" target="_blank">РГЗ</a>
             </li>
 
