--- a/lab7.html
+++ b/lab7.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Постников Кирилл Николаевич. Лабораторная 4</title>
     <link rel="stylesheet" href="main.css">
+    <script>
+        function addBlocks() {
+            let blocks = document.getElementById('blocks');
+            for(let i = 0; i < 10; i++) {
+                let block = document.createElement('div');
+                block.innerHTML = 'Блок №' + (i+1) + ';' + (2* i**2);
+
+                blocks.appendChild(block);
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
