--- a/lab7.html
+++ b/lab7.html
@@ -63,6 +63,16 @@
                 circles.appendChild(circle);
             }
         }
+        function umn() {
+            let b = document.getElementById('um');
+            for (let i = 13; i < 34; i++){
+                let n = document.createElement('div');
+                n.innerHTML = i + '*' + 29 + '='+ (i*29);
+                n.style.color = 'purple'
+                b.appendChild(n);
+            
+            }
+        }
     </script>
 </head>
 <body>
