--- a/lab7.html
+++ b/lab7.html
@@ -73,6 +73,31 @@
             
             }
         }
+        function KursAct(){
+            let data = ['22.05.2023', '23.05.2023', '24.05.2023', '25.05.2023', '26.05.2023', 
+                        '27.05.2023', '28.05.2023', '29.05.2023', '30.05.2023', '31.05.2023' ];
+            let kurs = [1731.00, 1745.00, 1798.00, 1769.00, 1789.00, 
+                        1805.00, 1754.50, 1750.50, 1776.00, 1784.50];
+            let table = document.getElementById('rusal');
+            for(let i = 0; i < data.length; i++){
+                let tr = document.createElement('tr')
+                let tdData = document.createElement('td')
+                tdData.innerHTML = data[i];
+                tr.appendChild(tdData);
+                let tdKurs = document.createElement('td')
+                tdKurs.innerHTML = kurs[i];
+                tr.appendChild(tdKurs);
+                let tdR = document.createElement('td')
+                if (i==0){
+                    tdR.innerHTML = '-' ;         
+                }
+                else{
+                    tdR.innerHTML = (kurs[i]-kurs[i-1]).toFixed(3);
+                }
+                tr.appendChild(tdR);
+                table.appendChild(tr);
+            }
+            
     </script>
 </head>
 <body>
