Количество дней с даты рождения

--- a/lab8.html
+++ b/lab8.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Постников Кирилл Николаевич. Лабораторная 8</title>
     <link rel="stylesheet" href="main.css">
+    <script src="lab8.js"></script>
 </head>
 <body>
     <header>
         НГТУ, ФБ, Лабораторная работа 8
+        <div id="time" style="position: absolute; top: 5px; right: 5px;">00:00:00</div>
     </header>
     <main>
-
+        <p style="font-size: 15pt;"><b>Задание с временем</b></p>
+        <div id="current-dateRU"></div>
+        <div id="current-dateZA"></div>
+        <div id="current-dateCA"></div>
+        <div id="current-datePA"></div>
+        <div id="current-dateEE"></div>
+        <div id="current-dateBE"></div>
     </main>
     <footer>
         &copy; Постников Кирилл, ФБИ-14, 2 курс, 2023
